--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   app:
-    container_name: keleia-app
+    container_name: avosloi
     build:
       context: .
       dockerfile: Dockerfile
