--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,5 @@ services:
     ports:
       - "6829:80"
     volumes:
-      - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./default.conf:/etc/nginx/conf.d/default.conf  # Vérifie que default.conf existe !
     restart: always
-
